--- a/style.css
+++ b/style.css
@@ -9,12 +9,17 @@ body {
 }
 
 button {
-    border: none;
     text-decoration: none;
-    border-radius: 12px;
     color: white;
     font-size: 23px;
     padding: 5px;
+    border: black 2px;
+    border-radius: 12px;
+    border-style: solid;
+}
+
+button:hover {
+    cursor: pointer;
 }
 
 #iniciarContagem {
@@ -35,14 +40,23 @@ button {
     display: flex;
     align-items: center;
     justify-content: center;
+
 }
+
 
 .content-box {
     background-color: brown;
     width: 400px;
     height: 400px;
-    color: white;
     text-align: center;
     padding: 20px;
-    border-radius: 12px;
+    border-radius: 14px;
+    border-style: solid;
+    border-width: 6px;
+}
+
+h1 {
+    color: white;
+    border-style: solid;
+    margin-bottom: 10px;
 }
